# patchlib

./: .gitignore  README.md  ips.txt  ips_docs.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md  issue-report.md
.github/workflows/: python-publish.yml
docs/: .readthedocs.yaml  README.md  conf.py  index.rst  ips_docs.md  ipsluna.ips_docs.md  patchlib.ips_docs.md
docs/.obsidian/: workspace.json
docs/Information/: author.rst  faq.rst  resources.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/Information/: author.doctree  faq.doctree  resources.doctree
docs/_build/doctrees/filetype_docs/: bps.doctree  ips.doctree
docs/_build/doctrees/package_docs/: bps.doctree  ips.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/Information/: author.html  faq.html  resources.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/Information/: author.rst.txt  faq.rst.txt  resources.rst.txt
docs/_build/html/_sources/filetype_docs/: bps.rst.txt  ips.rst.txt
docs/_build/html/_sources/package_docs/: ips.rst.txt
docs/_build/html/filetype_docs/: bps.html  ips.html
docs/_build/html/package_docs/: bps.html  ips.html
docs/filetype_docs/: bps.rst  bps_docs.md  eps_docs.md  ips_docs.md
docs/package_docs/: bps.rst  patchlib.bps_docs.md
docs/resources/: __ ZeroSoft __.html
docs/resources/__ ZeroSoft ___files/: common.css
docs/source/: index.rst
get_patchlib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: ips.py
src/get.patchlib/: __init__.py
src/get_patchlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ipsluna/: __init__.py
src/ipsluna/bps/: __init__.py
src/ipsluna/ips/: __init__.py
src/patchlib/: __init__.py  bps.py  eps.py  ips.py
src/patchlib/bps/: __init__.py
src/patchlib/ips/: __init__.py
