[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "get.patchlib"
version = "1.1"
description = "Patch file handler"
authors = [{ name = "BretteFromNesUniverse"}]
requires-python = ">=3.7"
dynamic = ["version", "description"]

[project.urls]
Homepage = "https://github.com/BrettefromNesUniverse/patchlib"
Bug Tracker = "https://github.com/BrettefromNesUniverse/patchlib/issues"

[tool.flit.metadata]
module = "patchlib"