[project]
name = "get.patchlib"
version = "1.1"
authors = [
  { name="BrettefromNesUniverse"}]
description = "Patch file handler"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]

[project.urls]
"Homepage" = "https://github.com/BrettefromNesUniverse/patchlib"
"Bug Tracker" = "https://github.com/BrettefromNesUniverse/patchlib/issues"

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    script_alias = patchlib.module_name:function_name