[metadata]
name = get.patchlib
version = 1.1
description = Patch file handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BrettefromNesUniverse/patchlib
author = BrettefromNesUniverse
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    script_alias = patchlib.module_name:function_name