[metadata]
name = get_patchlib
module = patchlib
version = 1.1
description = Patch file handler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BrettefromNesUniverse/patchlib
author = BrettefromNesUniverse
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
